// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should correctly render ExpensesSummary with 1 expense 1`] = `
<section
  className="page-header"
  component="ExpensesSummary"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing
       
      <span>
        1
         
        expense
      </span>
       
      totalling 
      <span>
        $3.24
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="btn md blue-bg"
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</section>
`;

exports[`Should correctly render ExpensesSummary with multiple expenses 1`] = `
<section
  className="page-header"
  component="ExpensesSummary"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing
       
      <span>
        3
         
        expenses
      </span>
       
      totalling 
      <span>
        $3,243.45
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="btn md blue-bg"
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</section>
`;
